fixed link placements, laning page text alignment fix, css adjustments

--- a/css/battle.css
+++ b/css/battle.css
@@ -47,13 +47,12 @@ body {
 /* Nav bar styling */
 nav {
   background-color: #29aa9c;
-  display: grid;
-  grid-template-columns: 1fr 20px 1fr 20px 1fr;
-  grid-template-rows: auto;
-  grid-template-areas:
-    "left . mid . right";
+  display: flex;
+  justify-content: space-around;
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-right: 10vw;
+  padding-left: 10vw;
   border: 3px solid black;
   border-top: hidden;
   border-left: hidden;
