--- a/css/landing.css
+++ b/css/landing.css
@@ -76,9 +76,9 @@ li {
   font-size: x-large;
   font-weight: 700;
   padding-bottom: 40px;
-
   margin: auto;
   width: 50%;
+  text-align: center;
 }
 
 
